header and footer rough done

--- a/spiderweb/app/index.html
+++ b/spiderweb/app/index.html
@@ -39,16 +39,16 @@
               <div class="nav-collapse collapse">
                 <ul class="nav">
                   <li class="">
-                    <a href="./index.html"><i class="icon-plane icon-white"> </i> Launch Pad</a>
+                    <a href="./index.html"><i class="icon-plane icon-white"></i> Launch Pad</a>
                   </li>
                   <li class="">
-                    <a href="./getting-started.html">Splash Down</a>
+                    <a href="./getting-started.html"><i class="icon-bell icon-white"></i> Splash Down</a>
                   </li>
                   <li class="">
-                    <a href="./scaffolding.html">Spider Diaries</a>
+                    <a href="./scaffolding.html"><i class="icon-globe icon-white"></i> Spider Diaries</a>
                   </li>
                   <li class="">
-                    <a href="./base-css.html">Our Words</a>
+                    <a href="./base-css.html"><i class="icon-star icon-white"></i> Our Words</a>
                   </li>
                 </ul>
                 <ul class="nav pull-right">
@@ -63,12 +63,38 @@
                   </li>
                 </ul>
               </div>
-
             </div>
           </div>
         </div>
 
-        <div class="container" ng-view></div>
+        <div class="" ng-view></div>
+
+        <!-- Footer
+        ================================================== -->
+        <footer class="footer">
+          <div class="row-fluid">
+            <div class="span2">
+              <img src="images/PS_loneSpider.png" class="pull-right" />
+            </div>
+            <div class="span2">
+              <a href="">What is <br> a Parallel Spider?</a>
+            </div>
+            <div class="span2">
+              <a href="">Dev Team</a>
+            </div>
+            <div class="span2">
+              <a href="">Terms, Privacy, <br> and Other Words...</a>
+            </div>
+            <div class="span2">
+              <a href="">Contact Us <br> or Share...</a>
+            </div>
+            <div class="span2 social-icons">
+              <img src="images/PS_facebook.png" class="pull-left clearfix" />
+              <img src="images/PS_googlePlus.png" class="pull-left" />
+              <img src="images/PS_twitter.png" class="pull-left" />
+            </div>
+          </div>
+        </footer>
 
         <script src="scripts/vendor/angular.js"></script>
 
