--- a/spiderweb/app/index.html
+++ b/spiderweb/app/index.html
@@ -77,6 +77,7 @@
             <img src="images/PS_loneSpider.png" class="pull-left" />
             <h1 class="pull-left">Parallel Spider</h1>
             <img src="images/PS_beta.png" id="beta" />
+            <h5 id="analyze">Analyze the World</h5>
           </div>
         </header>
 
