created route for ourwords

--- a/spiderweb/app/index.html
+++ b/spiderweb/app/index.html
@@ -50,7 +50,7 @@
                     <a href="./scaffolding.html"><i class="icon-globe icon-white"></i> Spider Diaries</a>
                   </li>
                   <li class="">
-                    <a href="./base-css.html"><i class="icon-star icon-white"></i> Our Words</a>
+                    <a ng-href="#/ourwords"><i class="icon-star icon-white"></i> Our Words</a>
                   </li>
                 </ul>
                 <ul class="nav pull-right">
@@ -95,16 +95,16 @@
               <img src="images/PS_loneSpider.png" class="pull-right" />
             </div>
             <div class="span2">
-              <a href="">What is <br> a Parallel Spider?</a>
+              <a href="#/ourwords/about">What is <br> a Parallel Spider?</a>
             </div>
             <div class="span2">
-              <a href="">Dev Team</a>
+              <a href="#/ourwords/devteam">Dev Team</a>
             </div>
             <div class="span2">
-              <a href="">Terms, Privacy, <br> and Other Words...</a>
+              <a href="#/ourwords/terms">Terms, Privacy, <br> and Other Words...</a>
             </div>
             <div class="span2">
-              <a href="">Contact Us <br> or Share...</a>
+              <a href="#/ourwords/contact">Contact Us <br> or Share...</a>
             </div>
             <div class="span2 social-icons">
               <img src="images/PS_facebook.png" class="pull-left clearfix" />
@@ -121,6 +121,7 @@
         <!-- build:js scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/controllers/ourwords.js"></script>
         <!-- endbuild -->
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
