--- a/spiderweb/app/index.html
+++ b/spiderweb/app/index.html
@@ -10,7 +10,6 @@
         <meta name="description" content=""/>
         <meta name="viewport" content="width=device-width"/>
         <link rel="stylesheet" href="styles/main.css"/>
-
     </head>
 
     <body ng-app="spiderwebApp">
@@ -37,17 +36,17 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="brand" href="./index.html">PS</a>
+              <a class="brand" href="#/">PS</a>
               <div class="nav-collapse collapse">
                 <ul class="nav">
                   <li class="">
-                    <a href="./index.html"><i class="icon-plane icon-white"></i> Launch Pad</a>
+                    <a ng-href="#/launchpad"><i class="icon-plane icon-white"></i> Launch Pad</a>
                   </li>
                   <li class="">
-                    <a href="./getting-started.html"><i class="icon-bell icon-white"></i> Splash Down</a>
+                    <a ng-href="#/splashdown"><i class="icon-bell icon-white"></i> Splash Down</a>
                   </li>
                   <li class="">
-                    <a href="./scaffolding.html"><i class="icon-globe icon-white"></i> Spider Diaries</a>
+                    <a ng-href="#/spiderdiaries"><i class="icon-globe icon-white"></i> Spider Diaries</a>
                   </li>
                   <li class="">
                     <a ng-href="#/ourwords"><i class="icon-star icon-white"></i> Our Words</a>
@@ -55,13 +54,13 @@
                 </ul>
                 <ul class="nav pull-right">
                   <li class="">
-                    <a href="./base-css.html">Sign In</a>
+                    <a ng-href="#/login">Sign In</a>
                   </li>
                   <li class="">
                     <p> || </p>
                   </li>
                   <li class="">
-                    <a href="./customize.html">Sign Up</a>
+                    <a ng-href="#/signup">Sign Up</a>
                   </li>
                 </ul>
               </div>
@@ -73,19 +72,19 @@
         <!-- Header
         ================================================== -->       
         <header class="header row-fluid page">
-          <div class="span12 padded">
-            <img src="images/PS_loneSpider.png" class="pull-left" />
-            <h1 class="pull-left">Parallel Spider</h1>
+        <div class="span12 padded">
+            <a ng-href="/">
+              <img src="images/PS_loneSpider.png" class="pull-left" />
+              <h1 class="pull-left">Parallel Spider</h1>
+            </a>
             <img src="images/PS_beta.png" id="beta" />
             <h5 id="analyze">Analyze the World</h5>
           </div>
         </header>
 
-
         <!-- View Insertion
         ================================================== -->
-        <div class="" ng-view></div>
-
+        <div class="view" ng-view ps-fullscreen  ng-style="{ 'min-height': minHeight }"></div>
 
         <!-- Footer
         ================================================== -->
@@ -122,6 +121,12 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/ourwords.js"></script>
+        <script src="scripts/controllers/launchpad.js"></script>
+        <script src="scripts/controllers/spiderdiaries.js"></script>
+        <script src="scripts/controllers/splashdown.js"></script>
+        <script src="scripts/controllers/login.js"></script>
+        <script src="scripts/controllers/myaccount.js"></script>
+        <script src="scripts/controllers/signup.js"></script>
         <!-- endbuild -->
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
