tried directive for analysis box, big fail, text splashdown finished

--- a/spiderweb/app/index.html
+++ b/spiderweb/app/index.html
@@ -25,7 +25,7 @@
             // However, IF you have custom directives (yours or someone else's) then
             // enumerate the list of tags in window.myCustomTags
              
-            window.myCustomTags = [ 'yourDirective', 'somebodyElsesDirective' ]; // optional
+            window.myCustomTags = [ 'pane', 'tabs', 'analysisbox' ]; // optional
             </script>
             <script src="build/angular-ui-ieshiv.js"></script>
         <![endif]-->
