--- a/spiderweb/app/index.html
+++ b/spiderweb/app/index.html
@@ -66,7 +66,7 @@
                 </ul>
                 <ul class="nav pull-right">
                   <li class="">
-                    <a ng-href="#/login">Sign In</a>
+                    <a ng-click="openDialog()">Sign In</a>
                   </li>
                   <li class="">
                     <p> || </p>
