--- a/spiderweb/app/index.html
+++ b/spiderweb/app/index.html
@@ -152,6 +152,7 @@
         <script src="scripts/controllers/myaccount.js"></script>
         <script src="scripts/controllers/signup.js"></script>
         <script src="scripts/controllers/template.js"></script>
+        <script src="scripts/controllers/crawling.js"></script>
         <!-- endbuild -->
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
