session info saved to cookies and reloaded during page refresh if available.

--- a/spiderweb/app/index.html
+++ b/spiderweb/app/index.html
@@ -141,6 +141,7 @@
         ================================================== -->
      
         <script src="scripts/vendor/angular.js"></script>
+        <script src="scripts/vendor/angular-cookies-1.0.0rc10.js"></script>
 
         <!-- build:js scripts/scripts.js -->
         <script src="scripts/app.js"></script>
