--- a/spiderweb/app/index.html
+++ b/spiderweb/app/index.html
@@ -48,7 +48,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-              <a class="brand" href="#/">PS</a>
+              <a class="brand" href="/">PS</a>
               <div class="nav-collapse collapse">
                 <ul class="nav">
                   <li class="">
