--- a/spiderweb/app/index.html
+++ b/spiderweb/app/index.html
@@ -145,6 +145,7 @@
 
         <!-- build:js scripts/scripts.js -->
         <script src="scripts/app.js"></script>
+        <script src="scripts/directives.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/ourwords.js"></script>
         <script src="scripts/controllers/launchpad.js"></script>
