Added 5 pages to fake website for internal link testing, along with external links and context analysis tests.

--- a/spiderengine/tests/e2e-tests/fake-website/index.html
+++ b/spiderengine/tests/e2e-tests/fake-website/index.html
@@ -1,12 +1,25 @@
 <html>
   <head>
-    <title>A fake website for testing</title>
+    <title>A fake website for testing - index</title>
     <meta name="description" content="some fake content for testing">
   </head>
   <body>
     <div>
-      <a></a>
+      <h2>external links</h2>
+      <a href="http://www.google.com">google</a>
+      <a href="http://www.google.com">google</a>
+      <a href="http://www.google.com">google</a>
+      <a href="http://www.google.com">google</a>
+      <a href="http://www.google.com">google</a>
+      <a href="https://www.facebook.com/">Facebook</a>
+      <a href="https://www.facebook.com/">Facebook</a>
+      <a href="https://www.facebook.com/">Facebook</a>
+      <a href="https://www.facebook.com/">Facebook</a>
+      <a href="https://www.facebook.com/">Facebook</a>
     </div>
+      <h2>internal links</h2>
+      <a href="https://s3.amazonaws.com/parallel_spider_test/page1.html">page1</a>
+      <a href="https://s3.amazonaws.com/parallel_spider_test/page2.html">page2</a>
     <div>
       <h1>hello world</h1>
       <h1>hello world</h1>
@@ -18,12 +31,24 @@
     <div>
       <p>spider spider spider spider spider spider spider spider spider spider spider spider spider spider spider spider spider spider spider spider spider spider spider spider spider spider spider spider spider spider spider spider spider spider spider spider spider spider spider spider spider spider spider spider spider spider spider spider spider spider spider spider spider spider</p>
       <p>test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test test</p>
+      <p>you are a test slut</p>
+      <p>a motha f'ing test slut<p>
+      <p>test slut slut</p>
       <p>yo hommy yo hommy yo hommy yo hommy yo hommy yo hommy yo hommy yo hommy yo hommy yo hommy yo hommy yo hommy yo hommy yo hommy yo hommy yo hommy yo hommy yo hommy yo hommy yo hommy</p>
+      <p>yo momma's moma is in the house</p>
+      <p>yo momma's moma is in the car</p>
+      <p>yo momma's moma is in the back</p>
+      <p>yo momma's moma is no where to be found</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec sagittis egestas aliquet. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aliquam erat volutpat. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Aenean commodo pretium nunc, vel laoreet nisl accumsan eu. Donec consectetur feugiat quam, in volutpat tortor sagittis non. Aliquam porta mattis dui, eget sagittis est varius non. Curabitur ornare risus ac velit auctor vehicula. Sed ac est risus, et blandit risus. Vivamus velit massa, rhoncus posuere euismod nec, faucibus id nisl. Quisque quis turpis eget felis venenatis pretium. Mauris pharetra sem nec ipsum fringilla molestie. Nam mollis, nunc eu adipiscing lobortis, enim justo luctus odio, nec auctor metus nisl eu dolor. Phasellus quis lectus metus.</p>
       <p>Nam nec neque tellus. Ut scelerisque blandit ante in semper. Quisque vel dolor nulla. Etiam ac dapibus velit. Quisque aliquet rutrum tincidunt. Nam ut sem erat. Morbi dignissim venenatis leo. Praesent risus sem, pellentesque id rutrum vel, gravida sed diam. </p>
       <p>Curabitur sed libero nisl. Maecenas vel libero ut ante tincidunt pretium in eget tortor. Nam nec semper enim. Maecenas sit amet lacus mauris. Vestibulum sed odio metus. Integer id dolor nisi, et luctus dolor. Mauris vel dui lectus. Integer vehicula lacus non lectus pellentesque vitae viverra odio lacinia. Donec mattis consequat rutrum. Vivamus pulvinar lobortis nisi, at ullamcorper felis porta in. Ut rutrum commodo leo, ut gravida felis eleifend vitae. Mauris ac lorem in nisl pharetra tempus.</p>
       <p>In vitae est libero. Nulla dui dolor, pretium vel laoreet eu, condimentum at neque. Curabitur non eros in enim interdum adipiscing vitae ut nibh. Aliquam in mauris ut nisl pulvinar ornare quis dictum metus. Nam mauris felis, mollis at vehicula in, interdum vitae nisi. Sed ac massa id ligula dapibus malesuada. Nullam rhoncus lectus id mauris euismod vehicula. In egestas auctor urna vitae viverra. Cras mi sem, eleifend id porttitor eget, porta et tortor. Donec vel metus dui. </p>
       <p>Quisque magna leo, elementum in auctor sed, malesuada et mauris. Praesent vestibulum, mauris a rhoncus hendrerit, leo augue bibendum neque, a fermentum lectus erat eu risus. Cras neque justo, consectetur et ultricies sed, egestas ac diam. Nullam et nunc orci, vel egestas diam. Vivamus lacinia convallis nisl, at fringilla lectus scelerisque eget. Maecenas et pretium quam. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Phasellus tincidunt orci elementum felis dapibus id facilisis tellus volutpat. Morbi felis erat, semper et scelerisque nec, lobortis vel nunc. Duis sit amet lectus massa. Etiam sit amet ultrices purus. Quisque arcu nisl, facilisis nec luctus mollis, molestie id diam. Curabitur ultrices pretium vestibulum. Aenean lacinia risus id orci semper vehicula. Vivamus vehicula neque ac velit vulputate lobortis. Phasellus semper velit nisl, vel dictum erat.</p>
     </div>
+    <ul>
+      <li>A</li>
+      <li>list</li>
+      <li>for</li>
+      <li>completeness</li>
   </body>
 </html>
