Fixed spiderrunner's test after moving all unit tests into unit-tests directory.  Still have issues with e2etest for multiple pages.

--- a/spiderengine/tests/e2e-tests/fake-website/page1.html
+++ b/spiderengine/tests/e2e-tests/fake-website/page1.html
@@ -6,7 +6,7 @@
   <body>
     <div>
       <h2>internal links</h2>
-      <a href="https://s3.amazonaws.com/parallel_spider_test/page3.html">page3</a>
+      <a href="http://www.parallelspider-test.com.s3-website-us-east-1.amazonaws.com/page3.html">page3</a>
     </div>
     <div>
       <p>This is page number f'ing 1</p>
