--- a/spiderengine/tests/e2e-tests/fake-website/page5.html
+++ b/spiderengine/tests/e2e-tests/fake-website/page5.html
@@ -7,7 +7,7 @@
     <div>
       <h2>Hoperfully the circular reference doesn't blow things up.</h2>
       <h2>This parallel spider biznatch better maintain its state.</h2>
-      <a href="https://s3.amazonaws.com/parallel_spider_test/index.html">index</a>
+      <a href="http://www.parallelspider-test.com.s3-website-us-east-1.amazonaws.com/index.html">index</a>
     </div>
     <div>
       <p>This is page number f'ing 5</p>
