--- a/spiderengine/tests/e2e-tests/fake-website/index.html
+++ b/spiderengine/tests/e2e-tests/fake-website/index.html
@@ -18,8 +18,8 @@
       <a href="https://www.facebook.com/">Facebook</a>
     </div>
       <h2>internal links</h2>
-      <a href="https://s3.amazonaws.com/parallel_spider_test/page1.html">page1</a>
-      <a href="https://s3.amazonaws.com/parallel_spider_test/page2.html">page2</a>
+      <a href="http://www.parallelspider-test.com.s3-website-us-east-1.amazonaws.com/page1.html">page1</a>
+      <a href="http://www.parallelspider-test.com.s3-website-us-east-1.amazonaws.com/page2.html">page2</a>
     <div>
       <h1>hello world</h1>
       <h1>hello world</h1>
