--- a/spiderengine/tests/e2e-tests/fake-website/page2.html
+++ b/spiderengine/tests/e2e-tests/fake-website/page2.html
@@ -6,7 +6,7 @@
   <body>
     <div>
       <h2>internal links</h2>
-      <a href="https://s3.amazonaws.com/parallel_spider_test/page4.html">page4</a>
+      <a href="http://www.parallelspider-test.com.s3-website-us-east-1.amazonaws.com/page4.html">page4</a>
     </div>
     <div>
       <p>This is page number f'ing 2</p>
